* #135: Add unified exclude mechanism * #224: Moved configuration to config file